# vesper-nighthawk

./: README.md  pyproject.toml
test_inputs/Clip Table Comparison/: Ithaca_2021-10-03_06.00.00_Z_detections.csv  Ithaca_2021-10-03_06.00.00_Z_detections.txt  Vesper Clip Table.csv  Vesper Clip Table.txt
vesper_nighthawk/: detector.py  run_nighthawk.py  version.py
vesper_nighthawk/tests/: test_detector.py
